argo/setup/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-webhooks-from-inet
  namespace: openshift-gitops
spec:
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
  podSelector:
    matchLabels:
      app.kubernetes.io/name: openshift-gitops-server
  policyTypes:
    - Ingress
status: {}
